[package]
name = "fix-layout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
breadx = "3.1.0"
clap = { version = "4.4.10", features = ["derive"] }
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
toml = "0.8.8"
